<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:padding="10dip">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/session_label"
			android:textSize="16sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<EditText android:layout_width="fill_parent" android:id="@+id/sessionName"
			android:layout_height="wrap_content" />
		<TextView android:text="@string/sessionDateLabel"
			android:textSize="16sp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<DatePicker android:layout_width="wrap_content" android:id="@+id/sessionDate"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<TableLayout android:gravity="bottom" android:orientation="horizontal"
		android:stretchColumns="*" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:padding="10dip">
		<TableRow>
			<Button android:layout_height="wrap_content" android:text="@string/save_button_label"
				android:layout_width="fill_parent" android:id="@+id/saveSession" />
			<Button android:id="@+id/cancelSession" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/cancel_button_label" />
		</TableRow>
	</TableLayout>
</RelativeLayout>
